# fractal_quant_cudnn

./: README  build-local.sh
libfractal/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libfractal/autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
libfractal/doc/html/: annotated.html  classes.html  dir_000001_000002.html  dir_000001_000003.html  dir_000003_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_b7878ad5ecbf2506f4125b9d34c97e45_dep.map  dir_b7878ad5ecbf2506f4125b9d34c97e45_dep.md5  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  (+72 more)
libfractal/doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  dir_e68e8157741866f444e17edd764ebbae.tex  files.tex  hierarchy.tex  index.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
libfractal/m4/: ax_check_cuda.m4
libfractal/src/: Makefile.am  Makefile.in  fractal.h
libfractal/src/core/: Connection.cc  Connection.h  CudaKernels.cu  CudaKernels.h  Engine.cc  Engine.h  FractalCommon.h  InitWeightParam.h  Layer.cc  Layer.h  Makefile.in  Matrix.h  Mem.h  Rnn.cc  Rnn.h
libfractal/src/core_old/: .Connection.cc.swp  .Connection.h.swp  .Rnn.h.swp  Connection.cc  Connection.h  CudaKernels.cu  CudaKernels.h  Engine.cc  Engine.h  FractalCommon.h  Layer.cc  Layer.h  Makefile.am  Makefile.in  Matrix.cc  Mem.cc  Probe.cc  Probe.h  Rnn.cc  Rnn.h
(+1653 files in other folders)
