noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = AutoOptimizer.cc \
		     BasicLayers.cc \
		     ClassificationEvaluator.cc \
		     DataStream.cc \
		     Evaluator.cc \
		     Optimizer.cc \
		     Pipe.cc \
		     RegressionEvaluator.cc

includesubdir = $(includedir)/fractal/util

includesub_HEADERS = AutoOptimizer.h \
		     BasicLayers.h \
		     ClassificationEvaluator.h \
		     DataSet.h \
		     DataStream.h \
		     Evaluator.h \
		     Optimizer.h \
		     Pipe.h \
		     PortMap.h \
		     RegressionEvaluator.h \
		     Stream.h

